# zlynx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  format.sh  main.cc
zco/: CMakeLists.txt  README.md
zco/include/zco/: channel.h  event.h  hook.h  io_event.h  mutex.h  pool.h  sched.h  wait_group.h  zco.h  zco_log.h
zco/src/: context.cc  epoller.cc  event.cc  fiber.cc  fiber_handle_registry.cc  fiber_pool.cc  hook.cc  io_event.cc  mutex.cc  pool.cc  processor.cc  runtime_manager.cc  sched.cc  shared_stack_buffer.cc  snapshot_buffer_pool.cc  steal_queue.cc  timer.cc  wait_group.cc  zco_log.cc
zco/tests/: CMakeLists.txt
zco/tests/benchmark/: stack_model_perf.cc  zco_perf.sh  zco_performance.cc
zco/tests/integration/: hook_integration.cc  hook_integration_test.cc
zco/tests/stress/: run_stack_model_perf_profile.sh  runtime_stress.cc  runtime_stress_test.cc  stack_model_perf.cc
zco/tests/support/: internal_fiber_test_helper.h  run_zco_coverage_gate.sh  test_design.md  test_fixture.h
zco/tests/unit/: channel_test.cc  channel_unit.cc  context_test.cc  context_unit.cc  coroutine_waiter_test.cc  coroutine_waiter_unit.cc  epoller_test.cc  epoller_unit.cc  event_test.cc  event_unit.cc  fiber_handle_registry_test.cc  fiber_handle_registry_unit.cc  fiber_pool_test.cc  fiber_pool_unit.cc  fiber_test.cc  fiber_unit.cc  hook_helper_test.cc  hook_helper_unit.cc  hook_metadata_timeout_test.cc  hook_metadata_timeout_unit.cc  hook_test.cc  hook_unit.cc  io_event_test.cc  io_event_unit.cc  log_test.cc  log_unit.cc  mutex_test.cc  mutex_unit.cc  noncopyable_test.cc  noncopyable_unit.cc  poller_test.cc  poller_unit.cc  pool_test.cc  pool_unit.cc  processor_internal_test.cc  processor_internal_unit.cc  processor_test.cc  processor_unit.cc  processor_wait_timer_test.cc  processor_wait_timer_unit.cc  (+18 more)
zcoroutine/: CMakeLists.txt
zcoroutine/docs/perf/: 2026-04-08-perf-cache-optimization-report.md  2026-04-08-stack-model-optimization-report.md  2026-04-08-zcoroutine-stack-model-perf-report.md
zcoroutine/examples/: http_server.cc  io_hook_example.cc  simple_fiber_example.cc
zcoroutine/include/: channel.h  channel_registry.h  epoll_poller.h  fd_context.h  fd_context_table.h  fiber.h  fiber_pool.h  io_scheduler.h  processor.h  rw_mutex.h  scheduler.h  semaphore.h  shared_stack.h  spinlock.h  status_table.h  stealable_queue_bitmap.h  task_queue.h  thread_context.h  work_stealing_queue.h  work_stealing_thread_pool.h  zcoroutine_logger.h  zcoroutine_noncopyable.h  zcoroutine_semaphore.h
zcoroutine/include/hook/: hook.h
zcoroutine/include/io/: epoll_poller.h  fd_context.h  (+2 more)
zcoroutine/src/: channel.cc  channel_registry.cc  context.cc  epoll_poller.cc  epoller.cc  event.cc  fd_context.cc  fd_context_table.cc  fiber.cc  fiber_handle_registry.cc  fiber_pool.cc  hook.cc  io_event.cc  io_scheduler.cc  mutex.cc  pool.cc  processor.cc  runtime_manager.cc  sched.cc  scheduler.cc  shared_stack.cc  shared_stack_buffer.cc  snapshot_buffer_pool.cc  stack_allocator.cc  status_table.cc  steal_queue.cc  stealable_queue_bitmap.cc  task_queue.cc  thread_context.cc  timer.cc  timer_manager.cc  wait_group.cc  work_stealing_queue.cc  work_stealing_thread_pool.cc  zcoroutine_logger.cc
zcoroutine/tests/: CMakeLists.txt
zhttp/: CMakeLists.txt  README.md
zhttp/include/: allocator.h  auth_middleware.h  compression_middleware.h  cors_middleware.h  daemon.h  error_middleware.h  http_common.h  http_parser.h  http_request.h  http_response.h  http_server.h  http_server_builder.h  http_utils.h  https_server.h  middleware.h  multipart.h  radix_tree.h  range_parse.h  rate_limiter.h  request_body_middleware.h  route_handler.h  router.h  security_middleware.h  server_config.h  session.h  ssl_context.h  static_file_middleware.h  static_file_opt.h  timeout_middleware.h  uri.h  websocket.h  websocket_frame.h  zhttp.h  zhttp_logger.h
zhttp/src/: allocator.cc  auth_middleware.cc  compression_middleware.cc  cors_middleware.cc  daemon.cc  error_middleware.cc  http_common.cc  http_parser.cc  http_request.cc  http_response.cc  http_server.cc  http_server_builder.cc  http_utils.cc  https_server.cc  middleware.cc  multipart.cc  radix_tree.cc  range_parse.cc  rate_limiter.cc  request_body_middleware.cc  router.cc  security_middleware.cc  server_config.cc  session.cc  ssl_context.cc  static_file_middleware.cc  static_file_opt.cc  timeout_middleware.cc  uri.cc  websocket.cc  websocket_frame.cc  zhttp_logger.cc
zhttp/tests/: CMakeLists.txt
zlog/: .gitignore  CMakeLists.txt  README.md
zlog/bench/: bench.cc
zlog/include/: buffer.h  format.h  level.h  logger.h  logging_config.h  looper.h  message.h  sink.h  util.h  zlog.h
zlog/src/: buffer.cc  format.cc  level.cc  logger.cc  logging_config.cc  looper.cc  message.cc  sink.cc  util.cc
zlog/tests/: CMakeLists.txt
zlog/zlog/: buffer.hpp  format.hpp  level.hpp  logger.hpp  looper.hpp  message.hpp  sink.hpp  util.hpp  zlog.h
zmalloc/: CMakeLists.txt  README.md
zmalloc/include/: central_cache.h  common.h  cpu_cache.h  free_list.h  object_pool.h  page_cache.h  page_heap.h  page_map.h  prefetch.h  size_class.h  span.h  span_list.h  system_alloc.h  thread_cache.h  transfer_cache.h  zmalloc.h  zmalloc_config.h  zmalloc_noncopyable.h
zmalloc/src/: central_cache.cc  free_list.cc  override.cc  page_cache.cc  page_heap.cc  size_class.cc  size_class_lookup.cc  span.cc  span_list.cc  system_alloc.cc  thread_cache.cc  transfer_cache.cc  zmalloc.cc
zmalloc/tests/: CMakeLists.txt
znet/: CMakeLists.txt  README.md  acceptor.cc  address.cc  buffer.cc  buffer.h
znet/include/: buff.h  socket.h  tcp_connection.h  tcp_server.h
znet/src/: acceptor.cc  address.cc  allocator.cc  buffer.cc  server.cc  session.cc  socket.cc  ssl.cc  tcp_client.cc  tcp_connection.cc  tcp_server.cc  tls_context.cc  tls_context_openssl.cc  znet_logger.cc
znet/tests/: CMakeLists.txt  acceptor_unit.cc  address_unit.cc  buffer_unit.cc  server_unit.cc  session_unit.cc  socket_unit.cc  tcp_connection_unit.cc  tcp_server_unit.cc  tls_context_unit.cc  znet_logger_unit.cc
(+361 files in other folders)
